// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup buttons should be displayed vertically 1`] = `
"<div class=\\"button-group vertical  \\"><button type=\\"button\\" class=\\"button mock\\" color=\\"default\\"><div class=\\"text\\">action1</div><style>
        .button {
          background: #0070f3;
          box-sizing: border-box;
          display: inline-block;
          padding: 0 1.25rem;
          height: 2.5rem;
          line-height: 2.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 12px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .875rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 12px;
          --nextui-button-padding: 1.25rem;
          --nextui-button-height: 2.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #0070f3;
        }
        .button:before {
          content: '';
          background: rgba(0, 112,243,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 12px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .button:hover:before {
          opacity: 0;
        }
        .button:not(.disabled):active {
          transform: scale(0.97);
        }
        .button:hover,
        .button:focus {
          background: rgba(0, 112,243,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .text p,
        .text pre,
        .text div {
          margin: 0;
        }
        .text.left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .text.right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><button type=\\"button\\" class=\\"button mock\\" color=\\"default\\"><div class=\\"text\\">action2</div><style>
        .button {
          background: #0070f3;
          box-sizing: border-box;
          display: inline-block;
          padding: 0 1.25rem;
          height: 2.5rem;
          line-height: 2.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 12px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .875rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 12px;
          --nextui-button-padding: 1.25rem;
          --nextui-button-height: 2.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #0070f3;
        }
        .button:before {
          content: '';
          background: rgba(0, 112,243,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 12px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .button:hover:before {
          opacity: 0;
        }
        .button:not(.disabled):active {
          transform: scale(0.97);
        }
        .button:hover,
        .button:focus {
          background: rgba(0, 112,243,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .text p,
        .text pre,
        .text div {
          margin: 0;
        }
        .text.left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .text.right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .button-group {
            display: inline-flex;
            border-radius: 12px;
            margin: calc(12px * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .vertical {
            flex-direction: column;
          }
          .button-group :global(.button .text) {
            top: 0;
          }
          .button-group :global(.button) {
            border: none;
          }
          .horizontal :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .horizontal :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .horizontal :global(.button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .horizontal :global(.button:not(:last-child):before) {
            border-radius: 0;
          }
          .gradient.horizontal
            :global(.button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .gradient.horizontal :global(.button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .gradient.vertical
            :global(.button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .gradient.vertical :global(.button:last-child) {
            padding-top: 0 !important;
          }
          .vertical :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .vertical :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .vertical :global(.button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 1`] = `
"<div class=\\"button-group horizontal  \\"><button type=\\"button\\" class=\\"button mock\\" color=\\"success\\"><div class=\\"text\\">action</div><style>
        .button {
          background: #17c964;
          box-sizing: border-box;
          display: inline-block;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 7px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .75rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 7px;
          --nextui-button-padding: 0.625rem;
          --nextui-button-height: 1.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #17c964;
        }
        .button:before {
          content: '';
          background: rgba(23, 201,100,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 7px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .button:hover:before {
          opacity: 0;
        }
        .button:not(.disabled):active {
          transform: scale(0.97);
        }
        .button:hover,
        .button:focus {
          background: rgba(23, 201,100,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .text p,
        .text pre,
        .text div {
          margin: 0;
        }
        .text.left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .text.right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .button-group {
            display: inline-flex;
            border-radius: 7px;
            margin: calc(12px * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .vertical {
            flex-direction: column;
          }
          .button-group :global(.button .text) {
            top: 0;
          }
          .button-group :global(.button) {
            border: none;
          }
          .horizontal :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .horizontal :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .horizontal :global(.button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .horizontal :global(.button:not(:last-child):before) {
            border-radius: 0;
          }
          .gradient.horizontal
            :global(.button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .gradient.horizontal :global(.button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .gradient.vertical
            :global(.button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .gradient.vertical :global(.button:last-child) {
            padding-top: 0 !important;
          }
          .vertical :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .vertical :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .vertical :global(.button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 2`] = `
"<div class=\\"button-group horizontal  \\"><button type=\\"button\\" class=\\"button mock\\" color=\\"success\\"><div class=\\"text\\">action</div><style>
        .button {
          background: rgba(23, 201,100,0.15);
          box-sizing: border-box;
          display: inline-block;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 7px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .75rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #17c964;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 7px;
          --nextui-button-padding: 0.625rem;
          --nextui-button-height: 1.5rem;
          --nextui-button-color: #17c964;
          --nextui-button-bg: rgba(23, 201,100,0.15);
        }
        .button:before {
          content: '';
          background: rgba(23, 201,100,0.25);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 7px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .button:hover:before {
          opacity: 0;
        }
        .button:not(.disabled):active {
          transform: scale(0.97);
        }
        .button:hover,
        .button:focus {
          background: rgba(23, 201,100,0.25);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .text p,
        .text pre,
        .text div {
          margin: 0;
        }
        .text.left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .text.right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .button-group {
            display: inline-flex;
            border-radius: 7px;
            margin: calc(12px * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .vertical {
            flex-direction: column;
          }
          .button-group :global(.button .text) {
            top: 0;
          }
          .button-group :global(.button) {
            border: none;
          }
          .horizontal :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .horizontal :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .horizontal :global(.button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .horizontal :global(.button:not(:last-child):before) {
            border-radius: 0;
          }
          .gradient.horizontal
            :global(.button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .gradient.horizontal :global(.button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .gradient.vertical
            :global(.button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .gradient.vertical :global(.button:last-child) {
            padding-top: 0 !important;
          }
          .vertical :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .vertical :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .vertical :global(.button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup should render correctly 1`] = `
"<div class=\\"button-group horizontal  \\"><button type=\\"button\\" class=\\"button mock\\" color=\\"default\\"><div class=\\"text\\">action</div><style>
        .button {
          background: #0070f3;
          box-sizing: border-box;
          display: inline-block;
          padding: 0 1.25rem;
          height: 2.5rem;
          line-height: 2.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 12px;
          border: 2px none
            transparent;
          font-weight: 500;
          font-size: .875rem;
          user-select: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: all 250ms ease;
          position: relative;
          overflow: hidden;
          color: #fff;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: ;
          --nextui-button-border-radius: 12px;
          --nextui-button-padding: 1.25rem;
          --nextui-button-height: 2.5rem;
          --nextui-button-color: #fff;
          --nextui-button-bg: #0070f3;
        }
        .button:before {
          content: '';
          background: rgba(0, 112,243,0.85);
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 100%;
          border-radius: 12px;
          transition: all 0.2s ease;
          z-index: 1;
          opacity: 0;
        }
        .button:hover:before {
          opacity: 0;
        }
        .button:not(.disabled):active {
          transform: scale(0.97);
        }
        .button:hover,
        .button:focus {
          background: rgba(0, 112,243,0.85);
          --nextui-button-color: undefined;
          filter: none;
          color: undefined;
          border-color: transparent;
          border-width: undefined;
          padding: undefined !important;
          cursor: pointer;
          pointer-events: auto;
        }
        .text {
          position: relative;
          z-index: 1;
          transform: translateY(
            -0
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          padding: 0 0;
          opacity: 1;
        }
        .text p,
        .text pre,
        .text div {
          margin: 0;
        }
        .text.left {
          padding-left: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
        .text.right {
          padding-right: calc(var(--nextui-button-height) / 2 + var(--nextui-button-padding) * .5);
        }
      </style></button><style>
          .button-group {
            display: inline-flex;
            border-radius: 12px;
            margin: calc(12px * 0.5);
            border: 0px solid #fff;
            background-color: transparent;
            height: min-content;
          }
          .vertical {
            flex-direction: column;
          }
          .button-group :global(.button .text) {
            top: 0;
          }
          .button-group :global(.button) {
            border: none;
          }
          .horizontal :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid #fff;
          }
          .horizontal :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .horizontal :global(.button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .horizontal :global(.button:not(:last-child):before) {
            border-radius: 0;
          }
          .gradient.horizontal
            :global(.button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .gradient.horizontal :global(.button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .gradient.vertical
            :global(.button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .gradient.vertical :global(.button:last-child) {
            padding-top: 0 !important;
          }
          .vertical :global(.button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid #fff;
          }
          .vertical :global(.button:not(:first-child):before) {
            border-radius: 0;
          }
          .vertical :global(.button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .vertical :global(.button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup should render different variants 1`] = `ReactWrapper {}`;

exports[`ButtonGroup should render different variants 2`] = `
<NextUI - Button
  animated={true}
  auto={false}
  borderWeight="normal"
  bordered={false}
  className=""
  color="default"
  disabled={false}
  flat={false}
  ghost={false}
  htmlType="button"
  light={false}
  loaderType="default"
  loading={true}
  rounded={false}
  shadow={false}
  size="md"
>
  button
</NextUI - Button>
`;
